--- a/src/index.html
+++ b/src/index.html
@@ -4,5 +4,8 @@
 <!-- build:include tpl-specific/index-specific.html -->
 <!-- /build -->
 
+<!-- build:include tpl-specific/team-footer.html -->
+<!-- /build -->
+
 <!-- build:include tpl-default/footer.html -->
 <!-- /build -->
