--- a/src/tpl-specific/index-specific.html
+++ b/src/tpl-specific/index-specific.html
@@ -4,7 +4,7 @@
             <span class="horizont-line"></span>
             <p>Lorem ipsum sit amet. Proin gravida nibh vel velit auctor aliquet.</p>
         </div>
-        <div class="content">
+        <div class="content blue">
 
             <div class="team-1">
                 <img src="./images/team/krisna.png" alt="Krisna Wijaya">
@@ -62,7 +62,7 @@
             </div>
         </div>
 
-        <div class="bottom-team-present">
+        <div class="bottom-team-present red">
             <button class="button-team">
                 <a href="#" title="Work with us">WORK WITH US</a>
             </button>
