For loops in action on lecture 14

--- a/src/tpl-specific/index-specific.html
+++ b/src/tpl-specific/index-specific.html
@@ -1,3 +1,4 @@
+<img src=".././img/team/gabriel.jpg" alt="Gabriel Yoshua">
 <footer class="footer blue red">
         <div class="wrap">
             <h2>MEET THE TEEM</h2>
@@ -5,7 +6,6 @@
             <p>Lorem ipsum sit amet. Proin gravida nibh vel velit auctor aliquet.</p>
         </div>
         <div class="content blue">
-
             <div class="team-1">
                 <img src="./images/team/krisna.png" alt="Krisna Wijaya">
                 <span class="vertical-line"></span>
