Adding the What we do section

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!-- build:include tpl-default/header.html -->
 <!-- /build -->
 
-<!-- build:include tpl-specific/index-specific.html -->
+<!-- build:include tpl-specific/what-we-do.html -->
 <!-- /build -->
 
 <!-- build:include tpl-default/footer.html -->
