--- a/src/tpl-specific/index-specific.html
+++ b/src/tpl-specific/index-specific.html
@@ -1,4 +1,45 @@
-<img src=".././img/team/gabriel.jpg" alt="Gabriel Yoshua">
+
+<section class="what-we-do">
+    <h1 class="heading"> 
+    what we do
+        <small class="sub-heading">Lorem ipsum dolor sit amet. Proin gravida nibh vel velit auctor aliquet.</small>
+    </h1>
+    <div class="info-wraper clearfix">
+        <div class="col-4 info-item">
+            <div class="icon-wrap ">
+                <img src="./img/wwd/clock.png" alt="Clock">
+            </div>
+            <h2>Lorem Ipsum</h2>
+            <p class="info-text">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
+            </p>
+            <a class="btn" href="#" title="Learn more">Learn more</a>
+        </div>
+        <!-- # info-item -->
+        <div class="col-4 info-item"> 
+            <div class="icon-wrap ">
+                <img src="./img/wwd/clock.png" alt="Clock">
+            </div>
+            <h2>Lorem Ipsum</h2>
+            <p class="info-text">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
+            </p>
+            <a class="btn" href="#" title="Learn more">Learn more</a>
+        </div>
+        <!-- # info-item -->
+        <div class="col-4 info-item">
+            <div class="icon-wrap ">
+                <img src="./img/wwd/bag.png" alt="Bag">
+            </div>
+            <h2>Lorem Ipsum</h2>
+            <p class="info-text">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
+            </p>
+            <a class="btn" href="#" title="Learn more">Learn more</a>
+        </div>
+        <!-- # info-item -->
+    </div>
+    <!-- # info-wraper -->
+</section>
+<!-- # what-we-do -->
+
 <footer class="footer blue red">
         <div class="wrap">
             <h2>MEET THE TEEM</h2>
@@ -6,6 +47,7 @@
             <p>Lorem ipsum sit amet. Proin gravida nibh vel velit auctor aliquet.</p>
         </div>
         <div class="content blue">
+
             <div class="team-1">
                 <img src="./images/team/krisna.png" alt="Krisna Wijaya">
                 <span class="vertical-line"></span>
