--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!-- build:include tpl-default/header.html -->
 <!-- /build -->
 
-<!-- build:include tpl-specific/team.html -->
+<!-- build:include tpl-specific/jumbotron.html -->
 <!-- /build -->
 
-<!-- build:include tpl-specific/team-footer.html -->
+<!-- build:include tpl-specific/grid.html -->
 <!-- /build -->
 
 <!-- build:include tpl-default/footer.html -->
