--- a/src/tpl-specific/grid.html
+++ b/src/tpl-specific/grid.html
@@ -1,10 +1,16 @@
-<div class="container">
+<!-- width му е задава във _variables.scss   -->
+<div class="container my-3">
   <div class="row">
-    <div class="col">col</div>
-    <div class="col">col</div>
-    <div class="col">col</div>
-    <div class="col">col</div>
+    <div class="col-xs-3 col-sm-2 col-md-5 col-lg-4 col-xl-2"></div>
+    <div class="col-xs-3 col-sm-4 col-md-1 col-lg-4 col-xl-3">col</div>
+    <div class="col-xs-3 col-sm-5 col-md-5 col-lg-2 col-xl-4">col</div>
+    <div class="col-xs-3 col-sm-1 col-md-1 col-lg-2 col-xl-3">col</div>
   </div>
+
+</div>
+
+<!-- напълно флуиден, тоест width е равен на проценти -->
+<div class="container-fluid my-3">
   <div class="row">
     <div class="col-8">col-8</div>
     <div class="col-4">col-4</div>
